# Frame_booster

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
models/model_v4/: FBNet.h5
models/model_v5/: history.pickle
models/model_v6/: history.pickle
models/model_v6_1/: history.pickle
notebooks/: data_processing_to_pytorch.ipynb  data_processing_to_tfrecords.ipynb  model_v3_tensorflow.ipynb  model_v6_1_pytorch.ipynb  model_v6_2_pytorch.ipynb  model_v6_3_pytorch.ipynb  model_v6_pytorch.ipynb  model_v7_pytorch.ipynb
proof_of_concept/: data_processing.ipynb  data_processing_to_pickle.ipynb  data_processing_to_tfrecords.ipynb  data_processing_vimeo90k.ipynb  frame_boosting_utils.ipynb  model_training.ipynb  model_v3_training_tfrecords.ipynb  model_v4_training_tfrecords.ipynb  model_v5_pytorch.ipynb  model_v6_1_pytorch_attention_vnet.py  model_v6_2_pytorch_attention_vnet.ipynb  model_v6_pytorch_attention_vnet.ipynb  model_v6_pytorch_attention_vnet.py  visualize_net.ipynb
src/: create_data.py  frame_decreaser.py  frame_generator.py
src/model_v1/: model.py  modules.py
src/model_v2/: modules.py
src/model_v3/: modules.py
src/pytorch/: benchmark.py  data_generator.py  train.py  utils.py
src/pytorch/model_v5/: modules.py
src/pytorch/model_v6/: modules.py
src/pytorch/model_v6_1/: modules.py
src/pytorch/model_v6_2/: modules.py
src/pytorch/model_v6_3/: modules.py  modules_6_3_1.py
src/pytorch/model_v6_4/: modules.py
src/pytorch/model_v6_5/: modules.py
src/pytorch/model_v6_6s/: modules.py
src/pytorch/model_v6_6t/: modules.py
src/pytorch/model_v6_7/: modules.py
src/tensorflow/: data_generator.py  train.py
(+6 files in other folders)
