[project]
name = "frame-booster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.7",
    "numpy==1.23.2",
    "opencv-python==4.6.0.66",
    "pandas==1.5.2",
    "tensorflow==2.13",
    "tensorflow-addons==0.21.0",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "tqdm==4.67.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/grpc_gen/**"]
typeCheckingMode = "basic"
reportPrivateUsage = "error"
reportPrivateImportUsage = "error"
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportUntypedFunctionDecorator = false
reportUnknownMemberType = false
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportIndexIssue = "none"
reportCallIssue = "none"
venvPath = "."
venv = ".venv"
